<resources>
    <string name="app_name">SampleGraphics</string>
    <string name="title_custom_activity">CUSTOM ACTIVITY</string>
    <string name="title_change">CHANGE</string>
    <string name="title_scroll_activity">SCROLL ACTIVITY</string>
    <string name="title_paint_activity">PAINT ACTIVITY</string>
    <string name="title_path_paint_activity">PATH PAINT ACTIVITY</string>
    <string name="title_surface_activity">SURFACE ACTIVITY</string>
    <string name="title_scroll">SCROLL</string>
    <string name="title_scroll_image_activity">SCROLL IMAGE ACTIVITY</string>
    <string name="title_drag_and_drop_activity">DRAG AND DROP ACTIVITY</string>
</resources>
